# src/app/modules/blog/blog.model.ts
@@ -1,0 +1,25 @@
+import { model, Schema } from 'mongoose';
+import { TBlog } from './blog.interface';
+
+const blogSchema = new Schema<TBlog>(
+  {
+    title: {
+      type: String,
+      required: true,
+    },
+    content: {
+      type: String,
+      required: true,
+    },
+    author: {
+      type: Schema.Types.ObjectId,
+      ref: 'User',
+    },
+    ispublished: {
+      type: Boolean,
+    },
+  },
+  { timestamps: true },
+);
+
+export const Blog = model('Blog', blogSchema);
