# src/app/modules/blog/blog.validation.ts
@@ -1,0 +1,22 @@
+import { z } from 'zod';
+
+const blogValidationSchema = z.object({
+  title: z.string({
+    required_error: 'Title is required',
+  }),
+  content: z.string({ required_error: 'Content is required' }),
+  author: z.string().optional(),
+  ispublished: z.boolean().optional(),
+});
+
+const updateBlogValidationSchema = z.object({
+  title: z.string().optional(),
+  content: z.string().optional(),
+  author: z.string().optional(),
+  isPublished: z.boolean().default(true).optional(),
+});
+
+export const BlogValidations = {
+  blogValidationSchema,
+  updateBlogValidationSchema,
+};
