# src/app/routes/index.ts
@@ -1,5 +1,8 @@
 import { Router } from 'express';
-import AuthRoutes from '../modules/auth/auth.router';
+
+import { BlogRoutes } from '../modules/blog/blog.router';
+import { AuthRoutes } from '../modules/auth/auth.router';
+import { AdminRoutes } from '../modules/Admin/admin.route';
 
 const router = Router();
 
@@ -7,6 +10,15 @@ const moduleRoutes = [
   {
     path: '/auth',
     route: AuthRoutes,
+  },
+
+  {
+    path: '/blogs',
+    route: BlogRoutes,
+  },
+  {
+    path: '/admin',
+    route: AdminRoutes,
   },
 ];
 
